fix: style of author boxes on mobile devices

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1180,11 +1180,12 @@ a:focus, a:hover {
 }
 
 .author-about {
-  margin: 20px 0 0 10px;
+  margin-left: 10px;
 }
 
 .post-author {
   display: flex;
+  align-items: center;
 }
 
 .post-author > img {
